compiler/tests/en/errors/immutable.salam
// EXPECT: E013
func main:
    x := 5
    x = 10
end
